@@ -12,6 +12,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [API_PARSER] Remove most of the code related to api collectors, now loaded as a separate module
 ### Fixed
 - [SETTINGS] Set and use correct REDIS HOST parameter value
+- [GUI] [NETIF] Prevent out of bounds carp configuration
 
 
 ## [2.34.4] - 2025-12-17
